--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
       <div class="masthead u-full-width">
         <h1><img src="/images/cloxp-logo.png"></h1>
       </div>
-      <div class="container">
+      <div class="container greeting">
         <div class="row">
-          <h3 class="greeting offset-by-two eight columns">Programming Clojure, interactive and live</h3>
+          <h3 class="offset-by-two eight columns">Programming Clojure, interactive and live</h3>
         </div>
       </div>
       <div class="container posts">
         <div class="row">
-          <div class="post offset-by-two eight columns">[2015-02-02] user testing</div>
+          <div class="post offset-by-two eight columns"><span class="date">[Feb 03 2015]</span><a>Welcome!</a></div>
         </div>
       </div>
     </div>
-    <div class="footer"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a></div>
+    <div class="footer"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a><span class="spacer">|</span><a href="/rss.xml">feed</a></div>
   </body>
 </html>
