--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <div class="footer"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a><span class="spacer">|</span><a href="/rss.xml">feed</a></div>
+    <div class="footer"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a><span class="spacer">|</span><a href="/atom.xml">feed</a></div>
   </body>
 </html>
