--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="/css/skeleton.css" rel="stylesheet">
     <link href="/css/default.css" rel="stylesheet">
-    <title>foo bar</title>
+    <title>cloxp</title>
     <meta property="og:title" content="cloxp">
     <meta property="og:description" content="cloxp, a Clojure development environement">
     <meta property="og:url" content="/index.html">
     <meta property="og:image" content="/images/cloxp-logo.jpg">
+    <link rel="shortcut icon" href="/favicon.ico">
     <link href="/css/greeting.css" rel="stylesheet"><a href="https://github.com/cloxp/cloxp"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"/></a>
     <!-- script(src="http://lively-web.org/users/robertkrahn/node-lively2lively/lively2lively-browserified.js?name=website-three-world&baseURL=http://lively-web.org:8080&autoload=true")-->
   </head>
@@ -25,10 +26,12 @@
       </div>
       <div class="container posts">
         <div class="row">
-          <div class="post offset-by-two eight columns"><span class="date">[Feb 03 2015]</span><a>Welcome!</a></div>
+          <div class="post offset-by-two eight columns"><span class="date">[Feb 03 2015]</span><a href="2015-02-02-welcome.html">Welcome!</a></div>
         </div>
       </div>
     </div>
-    <div class="footer"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a><span class="spacer">|</span><a href="/atom.xml">feed</a></div>
+    <div class="footer">
+      <div class="inner"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a><span class="spacer">|</span><a href="/atom.xml">feed</a></div>
+    </div>
   </body>
 </html>
