--- a/2015-02-02-whats-up.html
+++ b/2015-02-02-whats-up.html
@@ -51,5 +51,15 @@ However, before I make a first release I want to ask a handful of people to test
     <div class="footer">
       <div class="inner"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a><span class="spacer">|</span><a href="/atom.xml">feed</a></div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-56965545-3', 'auto', {'siteSpeedSampleRate': 50});
+      ga('require', 'linkid', 'linkid.js');
+      ga('require', 'displayfeatures');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
