--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
       </div>
       <div class="container posts">
         <div class="row">
-          <div class="post offset-by-two eight columns"><span class="date">[Feb 03 2015]</span><a href="2015-02-02-welcome.html">Welcome!</a></div>
+          <div class="post offset-by-two eight columns"><span class="date">[Feb 03 2015]</span><a href="2015-02-02-whats-up.html">What's up with cloxp?</a></div>
         </div>
       </div>
     </div>
     <div class="footer">
       <div class="inner"><a href="mailto:robert.krahn@gmail.com?Subject=cloxp" target="_top">© 2015 Robert Krahn</a><span class="spacer">|</span><a href="/atom.xml">feed</a></div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-56965545-3', 'auto', {'siteSpeedSampleRate': 50});
+      ga('require', 'linkid', 'linkid.js');
+      ga('require', 'displayfeatures');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
