--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta property="og:url" content="/index.html">
     <meta property="og:image" content="/images/cloxp-logo.jpg">
     <link rel="shortcut icon" href="/favicon.ico">
-    <link href="/css/greeting.css" rel="stylesheet"><a href="https://github.com/cloxp/cloxp"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"/></a>
+    <link href="/css/greeting.css" rel="stylesheet">
+    <!-- +fork-me('cloxp/cloxp')-->
     <!-- script(src="http://lively-web.org/users/robertkrahn/node-lively2lively/lively2lively-browserified.js?name=website-three-world&baseURL=http://lively-web.org:8080&autoload=true")-->
   </head>
   <body>
@@ -26,7 +27,7 @@
       </div>
       <div class="container posts">
         <div class="row">
-          <div class="post offset-by-two eight columns"><span class="date">[Feb 03 2015]</span><a href="2015-02-02-whats-up.html">What's up with cloxp?</a></div>
+          <div class="post offset-by-two eight columns"><span class="date">Feb 03 2015</span><a href="2015-02-02-whats-up.html">What's up with cloxp?</a></div>
         </div>
       </div>
     </div>
