--- a/2015-02-02-whats-up.html
+++ b/2015-02-02-whats-up.html
@@ -32,7 +32,7 @@
 <li>System browser: explore and modify Clojure namespaces and namespace vars</li>
 <li>&quot;Scratch&quot; workspaces: to support exploratory programming</li>
 <li>Clojars browser: to search for and install dependencies at runtime</li>
-<li>OS shell integration: to run whatever other process you may need, for example git. There are several tools that make use of this integration already</li>
+<li>OS shell integration: to run whatever other process you may need, for example git. There are several tools that make use of this integration already like a directory browser</li>
 <li>A flexible and very customizable windowing system: Based on Morphic and Lively Web; it allows to change how existing tools work, or create new ones, on the fly.</li>
 </ul>
 <h3 id="interactive-programming-and-debugging">Interactive programming and debugging</h3>
