--- a/2015-02-02-whats-up.html
+++ b/2015-02-02-whats-up.html
@@ -39,7 +39,7 @@
 <ul>
 <li>Watchers: cloxp allows to install &quot;watchers&quot; into code that will continuously gather data &quot;flowing&quot; through the instrumented expression.</li>
 <li>Code evaluation: To run and inspect code, all clojure expressions can be evaluated.</li>
-<li>Live eval: Instead of evaluating code by hand you can enable &quot;live eval&quot; in any clojure code editor. It will automatically re-evaluate the expressions in your workspace. Paired with watchers it is a powerful and fun way of working.</li>
+<li>Live eval: Instead of evaluating code by hand you can enable &quot;live eval&quot; in any clojure code editor. It will automatically re-evaluate the expressions in your workspace. Paired with watchers it is a powerful and fun way of working. If you used LightTables &quot;instarepl&quot; then you know this feature already.</li>
 </ul>
 <h3 id="what-s-next-help-needed-">What&#39;s next? Help needed!</h3>
 <p>Cloxp approaches a state in which I&#39;m willing to call it &quot;0.1.0&quot;. There are still plenty of bugs and other work left but I already had some very productive sessions (cloxp is entirely developed in itself, with all the fun and tears that this brings).</p>
