adding cloxp intro

--- a/2015-02-02-whats-up.html
+++ b/2015-02-02-whats-up.html
@@ -19,7 +19,7 @@
       <div style="margin-bottom: 50px" class="container">
         <div class="row">
           <div class="offset-by-two eight columns"><h1 id="what-s-up-with-cloxp-">What&#39;s up with cloxp?</h1>
-<p>It&#39;s been almost a month since the initial <a href="http://robert.kra.hn/projects/cloxp">announcement of cloxp</a>. I haven&#39;t been lazy and worked on several features that will make the usage of cloxp hopefully fun and pleasant.</p>
+<p>It&#39;s been almost a month since the initial <a href="/cloxp-intro.html">announcement of cloxp</a>. I haven&#39;t been lazy and worked on several features that will make the usage of cloxp hopefully fun and pleasant.</p>
 <p>Here is an overview of the feature set of cloxp as of today:</p>
 <h3 id="usage-and-access">Usage and access</h3>
 <ul>
