post about capturing

--- a/2015-02-02-whats-up.html
+++ b/2015-02-02-whats-up.html
@@ -41,6 +41,12 @@
 <li>Code evaluation: To run and inspect code, all clojure expressions can be evaluated.</li>
 <li>Live eval: Instead of evaluating code by hand you can enable &quot;live eval&quot; in any clojure code editor. It will automatically re-evaluate the expressions in your workspace. Paired with watchers it is a powerful and fun way of working. If you used LightTables &quot;instarepl&quot; then you know this feature already.</li>
 </ul>
+<h3 id="sophisticated-code-editing-support">Sophisticated code editing support</h3>
+<ul>
+<li>Structural navigation and editing with paredit</li>
+<li>Multiple cursors</li>
+<li>UI and shortcuts are completely customizable</li>
+</ul>
 <h3 id="what-s-next-help-needed-">What&#39;s next? Help needed!</h3>
 <p>Cloxp approaches a state in which I&#39;m willing to call it &quot;0.1.0&quot;. There are still plenty of bugs and other work left but I already had some very productive sessions (cloxp is entirely developed in itself, with all the fun and tears that this brings).</p>
 <p>However, before I make a first release I want to ask a handful of people to test the environment and help unveil bugs and smooth out workflows. Also, I need help in other areas, for example getting a windows installer working (cloxp runs now on MacOS and Linux), to help flesh out tutorials and documentation, and more useful features.</p>
