post about capturing

--- a/2015-02-03-cloxp-capture.html
+++ b/2015-02-03-cloxp-capture.html
@@ -49,7 +49,7 @@
                 <source src="videos/cloxp-capture-3.oggtheora.ogv" type="video/ogg; codecs=&quot;theora, vorbis&quot;"/>
               </video>
             </div>
-            <p>The feature is "real" and not just meant for the playground; it is no problem to instrument system-level code and code across namespaces. Ever wanted to see what's really going on in your Clojure image? Just ask it!</p>
+            <p>The feature is "real" and not just meant for the playground; it is no problem to instrument system-level code and code across namespaces. Ever wanted to see what's really going on in your Clojure image? Just ask it!<small>(Note: The function instrumented below is clojure.main/repl which itself is used continuously by cloxp, even (de)instrumenting depends on it. Yet, no interruption occurs.)</small></p>
             <div style="text-align: center; margin-left: -80px; margin-bottom: 120px;" class="video-wrapper">
               <video style="display: inline-block;" width="780" height="500" controls="" autobuffer="autobuffer">
                 <source src="videos/cloxp-capture-4.mp4" type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;"/>
