post about capturing

--- a/2015-02-03-cloxp-capture.html
+++ b/2015-02-03-cloxp-capture.html
@@ -5,7 +5,7 @@
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="/css/skeleton.css" rel="stylesheet">
     <link href="/css/default.css" rel="stylesheet">
-    <title>Capturing and inspecting values</title>
+    <title>Capture to see</title>
     <meta property="og:title" content="Capturing and inspecting values with cloxp">
     <meta property="og:description" content="How to capture values for debugging and inspection using cloxp.">
     <meta property="og:url" content="/2015-02-03-cloxp-capture.html">
@@ -18,7 +18,7 @@
     <div class="content">
       <div style="margin-bottom: 50px" class="container">
         <div class="row">
-          <div class="offset-by-two eight columns"><h1 id="capturing-and-inspecting-values">Capturing and inspecting values</h1>
+          <div class="offset-by-two eight columns"><h1 id="capture-to-see">Capture to see</h1>
 <p>One reason why programming can be considered &quot;hard&quot; is the fact that programs by definition are build on abstractions. As much power as abstractions can bring: they can make it harder to actually <em>see</em> what happens in programs.</p>
 <p>Take the object-oriented concept of classes as an example. A class serves as a description of objects<sup>*</sup>. First when a class gets instantiated it produces an actual thing whose state can be inspected and whose behavior observed. One big contribution of the Self language was to show how much more direct and straightforward programming becomes when prototypical inheritance (no abstract classes anymore) is paired with tools that allow to <a href="http://www.selflanguage.org/_static/published/self4.0UserInterface.pdf">directly interact with objects</a>.</p>
 <p>No matter which programming methodology you subscribe to, the programming language and the tools you use should make it easy for you to understand and <em>see</em> what happens in the programs you write. Playing interpreter is not our strong side, computers are much better at that!</p>
