post about capturing

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="container posts">
         <div class="row">
-          <div class="post offset-by-three six columns"><span class="date">Feb 03 2015</span><a href="2015-02-03-cloxp-capture.html">Capturing values with cloxp</a><br><span class="date">Feb 02 2015</span><a href="2015-02-02-whats-up.html">What's up with cloxp?</a><br><span class="date">Jan 07 2015</span><a href="cloxp-intro.html">Programming Clojure, Smalltalk-style</a></div>
+          <div class="post offset-by-three six columns"><span class="date">Feb 03 2015</span><a href="2015-02-03-cloxp-capture.html">Capture to see</a><br><span class="date">Feb 02 2015</span><a href="2015-02-02-whats-up.html">What's up with cloxp?</a><br><span class="date">Jan 07 2015</span><a href="cloxp-intro.html">Programming Clojure, Smalltalk-style</a></div>
         </div>
       </div>
     </div>
