post about capturing

--- a/2015-02-03-cloxp-capture.html
+++ b/2015-02-03-cloxp-capture.html
@@ -62,7 +62,8 @@
                 <source src="videos/cloxp-capture-5.mp4" type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;"/>
                 <source src="videos/cloxp-capture-5.oggtheora.ogv" type="video/ogg; codecs=&quot;theora, vorbis&quot;"/>
               </video>
-            </div><p>Capturing values is one of the simplest ways to help you <em>see</em> what is actually happing in your code. Paired with some support around visualization, managment and inspection it is a tool that will make the term &quot;printf debugging&quot; hopefully extinct.</p>
+            </div><p>Capturing values is one of the simplest ways to help you <em>see</em> what is actually happing in your code. By being able to directly access captured state you can directly find out what data your code deals with, making debugging much faster and direct and allowing you to peek through layers of abstractions.
+Paired with some support around visualization, managment and inspection it is a tool that will make the term &quot;printf debugging&quot; hopefully extinct.</p>
 
           </div>
         </div>
