--- a/2015-02-03-cloxp-capture.html
+++ b/2015-02-03-cloxp-capture.html
@@ -42,14 +42,14 @@
                 <source src="videos/cloxp-capture-2.oggtheora.ogv" type="video/ogg; codecs=&quot;theora, vorbis&quot;"/>
               </video>
             </div>
-            <p>This also works for asynchronous code:</p>
+            <p>This also works for asynchronous code:<small><br> (Note, by default only the last 30 captures are stored, this number can be increased if necessary.)</small></p>
             <div style="text-align: center; margin-left: -100px; margin-bottom: 120px;" class="video-wrapper">
               <video style="display: inline-block;" width="820" height="460" controls="" autobuffer="autobuffer">
                 <source src="videos/cloxp-capture-3.mp4" type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;"/>
                 <source src="videos/cloxp-capture-3.oggtheora.ogv" type="video/ogg; codecs=&quot;theora, vorbis&quot;"/>
               </video>
             </div>
-            <p>The feature is "real" and not just meant for the playground; it is no problem to instrument system-level code and code across namespaces. Ever wanted to see what's really going on in your Clojure image? Just ask it!<small><br> (Note: The function instrumented below is clojure.main/repl which itself is used continuously by cloxp, even (de)instrumenting depends on it. Yet, no interruption occurs.)</small></p>
+            <p>The feature is "real" and not just meant for the playground; it is no problem to instrument system-level code and code across namespaces. Ever wanted to see what's really going on in your Clojure image? Just ask it!<small><br> (Note, the function instrumented below is clojure.main/repl which itself is used continuously by cloxp, even (de)instrumenting depends on it. Yet, no interruption occurs.)</small></p>
             <div style="text-align: center; margin-left: -100px; margin-bottom: 120px;" class="video-wrapper">
               <video style="display: inline-block;" width="820" height="500" controls="" autobuffer="autobuffer">
                 <source src="videos/cloxp-capture-4.mp4" type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;"/>
