testing community section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         <div class="row">
           <div class="offset-by-three six columns"><a href="https://groups.google.com/forum/#!forum/cloxp">Google groups mailing list</a><br><a href="irc://irc.freenode.net/#clojure">freenode IRC</a><br></div>
         </div>
+      </div>
+      <div class="container posts">
+        <div class="row">
+          <div class="offset-by-four four columns">
+            <h4 class="fancy"><span>News</span></h4>
+          </div>
+        </div>
         <div class="row">
           <div class="post offset-by-three six columns"><span class="date">Apr 22 2015</span><a href="2015-04-22-making-cloxp-rock">Making cloxp rock</a><br><span class="date">Apr 22 2015</span><a href="2015-04-22-clojurewest.html">Clojure/West and chocolate pudding</a><br><span class="date">Feb 09 2015</span><a href="2015-02-09-cloxp-live-eval.html">Live eval</a><br><span class="date">Feb 03 2015</span><a href="2015-02-03-cloxp-capture.html">Capture to see</a><br><span class="date">Feb 02 2015</span><a href="2015-02-02-whats-up.html">What's up with cloxp?</a><br><span class="date">Jan 07 2015</span><a href="cloxp-intro.html">Programming Clojure, Smalltalk-style</a></div>
         </div>
