cloxp rock update

--- a/2015-04-22-making-cloxp-rock.html
+++ b/2015-04-22-making-cloxp-rock.html
@@ -24,9 +24,9 @@
 <p>If you are interested in joining the cloxp development or want to give feedback, there is now</p>
 <ul>
 <li><a href="https://groups.google.com/forum/#!forum/cloxp">a Google group mailing list</a> and</li>
-<li>the #cloxp IRC channel on freenode (chat.freenode.net, same server that hosts the Clojure IRC channel)</li>
+<li><a href="irc://irc.freenode.net/#clojure">the #cloxp IRC channel on freenode</a></li>
 </ul>
-<p>I will soon post a list of topics to clarify what needs to be worked on next and how you can participate. Please let me emphasize that any feedback and contribution, however small, helps. To get started, please consider <a href="https://github.com/cloxp/cloxp-install">installing cloxp</a> and importing a project into it or starting a new one. If any problems occur, please let me know via the mailing list or chat. Also, if you have features or specific workflows you would like to see in cloxp, please post those, too. Together we can make cloxp awesome!</p>
+<p>I will soon post a list of topics that I think have priority and which might be interesting entry points for contributions. Please let me emphasize that any feedback and participation, however small, helps. To get started, please consider <a href="https://github.com/cloxp/cloxp-install">installing cloxp</a> and importing a project into it or starting a new one. If any problems occur, please let me know via the mailing list or chat. Also, if you have features or specific workflows you would like to see in cloxp, please post those, too. Together we can make cloxp awesome!</p>
 
           </div>
         </div>
