adding gitter chat link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h4 class="fancy offset-by-four four columns"><span>Community</span></h4>
         </div>
         <div class="row">
-          <div class="offset-by-three six columns"><a href="https://groups.google.com/forum/#!forum/cloxp">Google groups mailing list</a><br><a href="irc://irc.freenode.net/#clojure">freenode IRC</a><br></div>
+          <div class="offset-by-three six columns"><a href="https://groups.google.com/forum/#!forum/cloxp">Google groups mailing list</a><br><a href="https://gitter.im/cloxp">cloxp chat on gitter</a><br></div>
         </div>
       </div>
       <div class="container posts">
