--- a/2015-04-22-making-cloxp-rock.html
+++ b/2015-04-22-making-cloxp-rock.html
@@ -24,7 +24,7 @@
 <p>If you are interested in joining the cloxp development or want to give feedback, there is now</p>
 <ul>
 <li><a href="https://groups.google.com/forum/#!forum/cloxp">a Google group mailing list</a> and</li>
-<li><a href="irc://irc.freenode.net/#clojure">the #cloxp IRC channel on freenode</a></li>
+<li><a href="https://gitter.im/cloxp">the #cloxp chat on gitter</a></li>
 </ul>
 <p>I will soon post a list of topics that I think have priority and which might be interesting entry points for contributions. Please let me emphasize that any feedback and participation, however small, helps. To get started, please consider <a href="https://github.com/cloxp/cloxp-install">installing cloxp</a> and importing a project into it or starting a new one. If any problems occur, please let me know via the mailing list or chat. Also, if you have features or specific workflows you would like to see in cloxp, please post those, too. Together we can make cloxp awesome!</p>
 
